# python_developer_DIO

./: README.md  banco_classes.py  banco_v2.py  desafio_1_banco_v1.py  desafio_1_banco_v2.py
banco_api/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
banco_api/migrations/: env.py
banco_api/migrations/versions/: 80a5afb71bca_create_initial_tables.py
banco_api/src/: config.py  database.py  exceptions.py  main.py  security.py
banco_api/src/controllers/: account.py  auth.py  transaction.py
banco_api/src/models/: account.py  transaction.py
banco_api/src/schemas/: account.py  auth.py  transaction.py
banco_api/src/services/: account.py  transaction.py
banco_api/src/views/: account.py  auth.py  transaction.py
